k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: rikili001
spec:
  replicas: 1
  selector:
    matchLabels: {app: frontend}
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxSurge: 1, maxUnavailable: 0}
  template:
    metadata:
      labels: {app: frontend}
    spec:
      containers:
      - name: frontend
        image: ravindudilhan/rebuild-frontend:latest
        imagePullPolicy: Always
        ports: [{containerPort: 3000}]
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: rikili001
spec:
  selector: {app: frontend}
  ports: [{port: 3000}]
